--- a/settings.gradle
+++ b/settings.gradle
@@ -5,11 +5,33 @@ pluginManagement {
         mavenCentral()
     }
 }
+enableFeaturePreview('VERSION_CATALOGS')
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+    }
+
+    versionCatalogs {
+        libs {
+            version("kotlin_version", "1.7.10")
+            version("retrofit_version", "2.9.0")
+            version("hilt_navigation_compose_version", "1.0.0")
+            version("lifecycle_viewmodel_compose_version", "2.5.1")
+            version("hilt_version", "2.43.1")
+            version("firebase_version", "30.2.0")
+            version("junit_version", "4.13.2")
+            version("activity_compose_version", "1.5.1")
+            version("lifecycle_runtime_ktx_version", "2.5.1")
+            version("core_ktx_version", "1.8.0")
+            version("compose_version", "1.2.1")
+            version("compose_compiler_version", "1.3.1")
+            version("nav_version", "2.5.1")
+
+            alias("core-ktx").to("androidx.core", "core-ktx").versionRef("core_ktx_version")
+            alias("lifecycle").to("androidx.lifecycle", "lifecycle-runtime-ktx").versionRef("lifecycle_runtime_ktx_version")
+        }
     }
 }
 rootProject.name = "PushMessageTestApp"
