--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         hilt_navigation_compose_version = "1.0.0"
         lifecycle_viewmodel_compose_version = "2.5.1"
         hilt_version = "2.43.1"
+        glide_version = "1.6.1"
         firebase_version = "30.2.0"
         junit_version = "4.13.2"
         activity_compose_version = "1.5.1"
